--- a/myecharts/index.html
+++ b/myecharts/index.html
@@ -38,7 +38,7 @@
         <div class="mainbox">
             <div class="column">
                 <div class="panel bar">
-                    <h2>柱形图-就业行业</h2>
+                    <h2>柱形图-就业行业1</h2>
                     <div class="chart">图表</div>
                     <div class="panel-footer">
 
@@ -47,14 +47,14 @@
 
 
                 <div class="panel line">
-                    <h2>柱形图-就业行业</h2>
+                    <h2>折线图-人员变化<a href="#">2020</a><a href="#">2021</a></h2>
                     <div class="chart">图表</div>
                     <div class="panel-footer">
 
                     </div>
                 </div>
-                <div class="panel bar">
-                    <h2>柱形图-就业行业</h2>
+                <div class="panel pie">
+                    <h2>饼形图-年龄分布</h2>
                     <div class="chart">图表</div>
                     <div class="panel-footer">
 
@@ -86,8 +86,8 @@
                 </div>
             </div>
             <div class="column">
-                <div class="panel bar">
-                    <h2>柱形图-就业行业</h2>
+                <div class="panel bar2">
+                    <h2>柱形图-就业行业2</h2>
                     <div class="chart">图表</div>
                     <div class="panel-footer">
 
@@ -95,15 +95,15 @@
                 </div>
 
 
-                <div class="panel bar">
-                    <h2>柱形图-就业行业</h2>
+                <div class="panel line2">
+                    <h2>折线图-播放量</h2>
                     <div class="chart">图表</div>
                     <div class="panel-footer">
 
                     </div>
                 </div>
-                <div class="panel bar">
-                    <h2>柱形图-就业行业</h2>
+                <div class="panel pie2">
+                    <h2>饼形图-地区分布</h2>
                     <div class="chart">图表</div>
                     <div class="panel-footer">
 
@@ -114,9 +114,9 @@
     </section>
     <script src="./js/flexible.js"></script>
     <script src="./js/echarts.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/china.js"></script>
     <script src="./js/index.js"></script>
 </body>
 
 </html>
-
-
