--- a/demo.html
+++ b/demo.html
@@ -6,12 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        .header {
+            width: 300px;
+            height: 100px;
+         
+            box-sizing: border-box;
+            display: flex;
+        }
+
+        .left {
+            flex: 1;
+            width: 150px;
+            height: 100px;
+            line-height: 100px;
+            text-align: center;
+            /* background-color: pink; */
+        }
+
+        .right {
+            flex: 1;
+            width: 150px;
+            height: 100px;
+         
+        }
+        .top,.bottom {
+            height: 50px;
+            line-height: 50px;
+            text-align: center;
+        }
+
+    </style>
 </head>
 
 <body>
-    <script>
-
-    </script>
+    <div class="header">
+        <div class="left">
+            左边
+        </div>
+        <div class="right">
+            <div class="top">1</div>
+            <div class="bottom">2</div>
+        </div>
+    </div>
 </body>
 
 </html>
